# toolbox

./: BACKEND_REMOVAL_SUMMARY.md  BUILD_OUTPUT.md  CONTEXT_MENU_FEATURE.md  DEBUG_LOGGING.md  DIAGRAM_EXAMPLES.md  DISK_SCANNER_README.md  FEATURES.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  MARKDOWN_TEST.md  MERMAID_SYNTAX_GUIDE.md  MERMAID_TEST.md  NOTIFICATIONS.md  PHASE3_SUMMARY.md  PORT_CONFLICT_SOLUTION.md  PORT_FIX_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README.md.new  README.md.old  REMOVE_DISK_SCANNER.md  SOFTWARE_ARCHITECTURE.md  STORAGE.md  USER_GUIDE_PHASE3.md  WIKI_FEATURE.md  dev.sh  notification.html  package-lock.json  package.json  run.sh  vite.config.ts  使用说明.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: App.vue  AppSimple.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ARCHITECTURE.md  disk_scanner.rs  evidence_commands.rs  lib.rs  state.rs  wiki_commands.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/database/: evidence_operations.rs  init.rs  mod.rs  operations.rs
src-tauri/src/models/: evidence.rs  mod.rs  reminder.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/tray/: mod.rs
src/components/: ContextMenu.vue  DiskItem.vue  DiskScanner.vue  DocumentImportModal.vue  RemindersApp.vue  SectionNode.vue  TableInsertModal.vue  WikiApp.vue  WikiEditor.vue  WikiMetadata.vue  WikiPreview.vue  WikiSidebar.vue
sync-server/: .gitignore  Dockerfile  README.md  go.mod  main.go  test.sh
(+5 files in other folders)
