[package]
name = "tauri-vue-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_vue_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
tauri-plugin-opener = "2"
dirs = "5.0"
uuid = { version = "1.10", features = ["v4"] }
tauri-plugin-dialog = "2.4.2"

# Tauri with mobile support
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri = { version = "2", features = ["protocol-asset"] }

# Desktop-specific features (tray icon only works on desktop)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
